# photo-renamer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
old/: rename_photos.sh
src/photo_renamer/: __main__.py  functions.py  photo.py
tests/: test_photo_renamer.py
